src/parse/snapshots/dilaria__parse__test__equality__number_literal.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    Number(
        10.0,
        Span(
            0..0,
        ),
    ),
)
